--- a/Dockerfile-isolated.dev
+++ b/Dockerfile-isolated.dev
@@ -15,7 +15,7 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-git clone https://github.com/Marconiadsf/gcp-series.git
+RUN git clone https://github.com/Marconiadsf/gcp-series.git
 
 
 # Mantém o container rodando
